# mabiphmo

.github/workflows/: c++Backend.yml  c++Libs.yml  cmake.yml
backend/c++/boostTest/: CMakeLists.txt  main.cpp
backend/c++/libs/: .gitignore  CMakeLists.txt  mabiphmoConfig.cmake.in
backend/c++/libs/.github/workflows/: c++Backend.yml
backend/c++/libs/httpServer/: CMakeLists.txt
backend/c++/libs/httpServer/include/mabiphmo/httpServer/: main.h
backend/c++/libs/httpServer/include/mabiphmo/httpServer/handler/: HandlerResult.h  IHandler.h  IHandlerContext.h  Sender.h
backend/c++/libs/httpServer/src/: main.cpp
backend/c++/libs/httpServer/src/construction/: AppBuilder.cpp  AppBuilder.h
backend/c++/libs/httpServer/src/session/: Session.cpp  Session.h
backend/c++/libs/httpServer/test/: CMakeLists.txt  test1.cpp
backend/c++/libs/ioc/: CMakeLists.txt
backend/c++/libs/ioc/include/mabiphmo/ioc/: Container.h
backend/c++/libs/ioc/src/: stud.cpp
backend/c++/libs/ioc/test/: CMakeLists.txt
backend/c++/libs/ioc/test/container/: ArgTests.cpp  SingletonFactoryTests.cpp  SingletonInstanceTests.cpp
backend/c++/libs/iocServer/: CMakeLists.txt
backend/c++/libs/iocServer/include/mabiphmo/iocServer/construction/: IAppBuilder.h  ServiceArgBaseCast.h  ServiceArgPointerBaseCast.h  ServiceArgRelation.h  ServiceArgValue.h
backend/c++/libs/iocServer/src/: Server.cpp  ThreadRunner.h  main.cpp
backend/c++/libs/iocServer/src/construction/: AppBuilder.h
backend/c++/libs/iocServer/test/: AppBuilderTests.cpp  CMakeLists.txt  structs.h
backend/libs/httpServer/include/mabiphmo/httpServer/construction/: IAppBuilder.h
backend/libs/httpServer/include/mabiphmo/httpServer/handler/: IContextHandler.h  IRequestContext.h
backend/libs/ioc/include/mabiphmo/ioc/: warnings.h
backend/libs/ioc/test/: CMakeLists.txt
backend/libs/ioc/test/container/: ClassFactoryTests.cpp  argStructs.h  structs.h
backend/libs/iocServer/include/mabiphmo/iocServer/: main.h
backend/libs/iocServer/include/mabiphmo/iocServer/construction/: IServiceArg.h
backend/libs/iocServer/include/mabiphmo/iocServer/service/: IStartableService.h
backend/libs/iocServer/src/: Server.h  ThreadRunner.cpp
backend/libs/iocServer/src/construction/: AppBuilder.cpp
backend/libs/iocServer/test/: IStartableServiceTests.cpp  ServerTests.cpp
